crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@rare_helmet.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/rare_helmet.txt
---
Item {
    item_class: "Helmets",
    rarity: Rare,
    name: Some(
        "Skull Keep",
    ),
    base_type: Some(
        "Desert Cap",
    ),
    item_level: Some(
        80,
    ),
    quality: Some(
        20,
    ),
    requirements: Requirements {
        level: Some(
            70,
        ),
        strength: None,
        dexterity: Some(
            99,
        ),
        intelligence: None,
    },
    sockets: Some(
        "S",
    ),
    stack_size: None,
    properties: [
        Property {
            name: "Evasion Rating",
            value: "1433 (augmented)",
        },
    ],
    rune_mods: [
        "8% increased Reservation Efficiency of Minion Skills (rune)",
    ],
    modifiers: [
        Modifier {
            kind: Prefix,
            source: None,
            name: Some(
                "Elusory",
            ),
            tier: Some(
                1,
            ),
            tags: [
                "Evasion",
            ],
            stats: [
                "+197(177-207) to Evasion Rating",
            ],
        },
        Modifier {
            kind: Prefix,
            source: Some(
                Desecrated,
            ),
            name: Some(
                "Mirage's",
            ),
            tier: Some(
                1,
            ),
            tags: [
                "Evasion",
            ],
            stats: [
                "96(92-100)% increased Evasion Rating",
            ],
        },
        Modifier {
            kind: Prefix,
            source: None,
            name: Some(
                "Wanderer's",
            ),
            tier: Some(
                1,
            ),
            tags: [
                "Mana",
                "Evasion",
            ],
            stats: [
                "39(39-42)% increased Evasion Rating",
                "+35(33-39) to maximum Mana",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: Some(
                "of Exile",
            ),
            tier: Some(
                2,
            ),
            tags: [
                "Chaos",
                "Resistance",
            ],
            stats: [
                "+23(20-23)% to Chaos Resistance",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: Some(
                "of the Despot",
            ),
            tier: Some(
                1,
            ),
            tags: [
                "Minion",
                "Gem",
            ],
            stats: [
                "+2 to Level of all Minion Skills",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: Some(
                "of the Ice",
            ),
            tier: Some(
                2,
            ),
            tags: [
                "Elemental",
                "Cold",
                "Resistance",
            ],
            stats: [
                "+38(36-40)% to Cold Resistance",
            ],
        },
    ],
    flavour_text: [],
    description: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
