crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@rare_jewel.txt.snap
---
source: crates/parser/tests/snapshots.rs
expression: item
input_file: crates/parser/tests/items/rare_jewel.txt
---
Item {
    item_class: "Jewels",
    rarity: Rare,
    name: Some(
        "Fulgent Ornament",
    ),
    base_type: Some(
        "Sapphire",
    ),
    item_level: Some(
        80,
    ),
    quality: None,
    requirements: Requirements {
        level: None,
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: None,
    properties: [],
    rune_mods: [],
    modifiers: [
        Modifier {
            kind: Prefix,
            source: None,
            name: Some(
                "Numbing",
            ),
            tier: Some(
                1,
            ),
            tags: [
                "Damage",
                "Elemental",
                "Cold",
            ],
            stats: [
                "Damage Penetrates 10(5-10)% Cold Resistance",
            ],
        },
        Modifier {
            kind: Prefix,
            source: None,
            name: Some(
                "Chaotic",
            ),
            tier: Some(
                1,
            ),
            tags: [
                "Damage",
                "Chaos",
            ],
            stats: [
                "9(7-13)% increased Chaos Damage",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: Some(
                "of Osmosis",
            ),
            tier: Some(
                1,
            ),
            tags: [
                "Mana",
            ],
            stats: [
                "Recover 2(1-2)% of maximum Mana on Kill",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: Some(
                "of Annihilating",
            ),
            tier: Some(
                1,
            ),
            tags: [
                "Caster",
                "Critical",
            ],
            stats: [
                "14(5-15)% increased Critical Hit Chance for Spells",
            ],
        },
    ],
    flavour_text: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
