crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@rare_quarterstaff.txt.snap
---
source: crates/parser/tests/snapshots.rs
expression: item
input_file: crates/parser/tests/items/rare_quarterstaff.txt
---
Item {
    item_class: "Quarterstaves",
    rarity: Rare,
    name: Some(
        "Loath Spell",
    ),
    base_type: Some(
        "Bladed Quarterstaff",
    ),
    item_level: Some(
        64,
    ),
    quality: None,
    requirements: Requirements {
        level: Some(
            59,
        ),
        strength: None,
        dexterity: Some(
            81,
        ),
        intelligence: Some(
            33,
        ),
    },
    sockets: None,
    stack_size: None,
    properties: [
        Property {
            name: "Physical Damage",
            value: "53-104 (augmented)",
        },
        Property {
            name: "Cold Damage",
            value: "34-61 (cold)",
        },
        Property {
            name: "Critical Hit Chance",
            value: "10.00%",
        },
        Property {
            name: "Attacks per Second",
            value: "1.40",
        },
    ],
    rune_mods: [],
    modifiers: [
        Modifier {
            kind: Prefix,
            source: None,
            name: Some(
                "Burnished",
            ),
            tier: Some(
                8,
            ),
            tags: [
                "Damage",
                "Physical",
                "Attack",
            ],
            stats: [
                "Adds 8(5-8) to 10(10-15) Physical Damage",
            ],
        },
        Modifier {
            kind: Prefix,
            source: None,
            name: Some(
                "Frozen",
            ),
            tier: Some(
                5,
            ),
            tags: [
                "Damage",
                "Elemental",
                "Cold",
                "Attack",
            ],
            stats: [
                "Adds 34(32-43) to 61(49-66) Cold Damage",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: Some(
                "of Ire",
            ),
            tier: Some(
                6,
            ),
            tags: [
                "Damage",
                "Attack",
                "Critical",
            ],
            stats: [
                "+10(10-11)% to Critical Damage Bonus",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: Some(
                "of Osmosis",
            ),
            tier: Some(
                7,
            ),
            tags: [
                "Mana",
            ],
            stats: [
                "Gain 5(4-5) Mana per enemy killed",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: Some(
                "of Rejuvenation",
            ),
            tier: Some(
                4,
            ),
            tags: [
                "Life",
                "Attack",
            ],
            stats: [
                "Grants 2 Life per Enemy Hit",
            ],
        },
    ],
    flavour_text: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
