crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@skill_gem.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/skill_gem.txt
---
Item {
    item_class: "Skill Gems",
    rarity: Gem,
    name: Some(
        "Freezing Mark",
    ),
    base_type: None,
    item_level: None,
    quality: None,
    requirements: Requirements {
        level: Some(
            52,
        ),
        strength: None,
        dexterity: Some(
            51,
        ),
        intelligence: Some(
            51,
        ),
    },
    sockets: Some(
        "G G G",
    ),
    stack_size: None,
    properties: [
        Property {
            name: "Level",
            value: "13",
        },
        Property {
            name: "Cost",
            value: "52 Mana",
        },
        Property {
            name: "Cooldown Time",
            value: "0.50s",
        },
        Property {
            name: "Use Time",
            value: "0.50s",
        },
    ],
    rune_mods: [],
    modifiers: [],
    flavour_text: [],
    description: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
