crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@skill_gem_double_requires.txt.snap
---
source: crates/parser/tests/snapshots.rs
expression: item
input_file: crates/parser/tests/items/skill_gem_double_requires.txt
---
Item {
    item_class: "Skill Gems",
    rarity: Gem,
    name: Some(
        "Whirling Assault",
    ),
    base_type: None,
    item_level: None,
    quality: Some(
        20,
    ),
    requirements: Requirements {
        level: Some(
            90,
        ),
        strength: None,
        dexterity: Some(
            86,
        ),
        intelligence: Some(
            86,
        ),
    },
    sockets: Some(
        "G G",
    ),
    stack_size: None,
    properties: [
        Property {
            name: "Level",
            value: "21 (augmented)",
        },
        Property {
            name: "Cost",
            value: "136 Mana",
        },
        Property {
            name: "Attack Speed",
            value: "85% of base",
        },
        Property {
            name: "Attack Damage",
            value: "176%",
        },
    ],
    rune_mods: [],
    modifiers: [],
    flavour_text: [],
    notes: [
        "~b/o 7 divine",
    ],
    corrupted: true,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
